@@ -12,6 +12,7 @@ lintian-brush (0.53) UNRELEASED; urgency=medium
 
   [ Jelmer Vernooĳ ]
   * Refactor systemd support.
+  * Add fixer for systemd-service-alias-without-extension.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Mon, 30 Dec 2019 15:42:08 +0000
 
